--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,1 +1,3 @@
-<app-notas>
+<app-notas-busqueda></app-notas-busqueda>
+<app-notas></app-notas>
+<a href="" class="position-fixed "><i class="bi bi-plus-circle-fill"></i></a>
