--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,7 @@
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control p-2 shadow-sm bg-white rounded" id="password" placeholder="Contraseña">
             </div>
-            <button type="submit" class="btn btn-primary text-white col-12 p-2 mt-2">Submit</button>
+           <button type="submit" class="btn btn-primary text-white col-12 p-2 mt-2" (click)="miMetodo()">Submit</button>
         </form>
     </div>
 </div>
