--- a/src/app/layout-con-header/layout-con-header.component.html
+++ b/src/app/layout-con-header/layout-con-header.component.html
@@ -1,2 +1,3 @@
-<app-header></app-header>
+<!--<app-header></app-header>-->
+<app-navbar-bottom></app-navbar-bottom>
 <router-outlet></router-outlet>
