--- a/src/app/notas/notas.component.html
+++ b/src/app/notas/notas.component.html
@@ -1,9 +1,9 @@
-<div class="card">
-    <div class="card-body">
-        <div d-flex >
-            <i class="bi bi-check-circle text-primary"></i>
-            <h5 class="card-title">titulo</h5>
+<div class="w-100 card mx-auto mr-2">
+    <div class="card-body d-flex flex-column justify-content-center">
+        <div class="d-flex flex-row my-1">
+            <i class="bi bi-check-circle text-primary mx-2"></i>
+            <h5 class="card-title">Titulo</h5>
         </div>
-        <p class="card-text">19/11/2024</p>
+        <p class="text-end mx-2">19/11/2024</p>
     </div>
 </div>
