Vista de nueva nota

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,3 +1,4 @@
 <app-notas-busqueda></app-notas-busqueda>
 <app-notas></app-notas>
-<a href="" class="position-fixed "><i class="bi bi-plus-circle-fill"></i></a>
+<button class="btn position-fixed bottom-0 end-0 p-3 mb-5 me-4 z-3" (click)="miMetodo()"><i class="bi bi-plus-circle-fill text-primary"></i></button>
+
