--- a/src/app/nueva-nota/nueva-nota.component.html
+++ b/src/app/nueva-nota/nueva-nota.component.html
@@ -1,6 +1,17 @@
-<div>
-    <div>
+<div class="w-100">
+    <div class="display-6 py-5 d-flex justify-content-between w-75 mx-auto">
         <i class="bi bi-caret-left-fill"></i>
-
+        <i class="bi bi-plus-lg"></i>
+    </div>
+    <div class="mx-4">
+        <p>Agrega un título</p>
+        <input type="text" class="form-control p-2 shadow-sm border-secondary">
+        <p class="mt-4">Agrega un contenido</p>
+        <textarea class="form-control h-5 shadow-sm border-secondary" style="height: 50vh"></textarea>
+        <select class="form-select p-2 mt-4 shadow-sm border-secondary">
+            <option value="1">Prioridad Alta</option>
+            <option value="2">Prioridad Media</option>
+            <option value="3">Prioridad Baja</option>
+        </select>
     </div>
 </div>
