--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,8 +3,8 @@
         <img src="list.png" class="mx-auto d-block">
         <form>
             <div class="form-group my-4">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control p-2 shadow-sm bg-white rounded" id="username" placeholder="Usuario">
+                <label for="email" class="form-label">Email</label>
+                <input type="text" class="form-control p-2 shadow-sm bg-white rounded" id="email" placeholder="Email">
             </div>
             <div class="form-group my-4">
                 <label for="password" class="form-label">Password</label>
