Vista de nueva nota, configuracion, registro y cambios en el navbar

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,4 +1,5 @@
-<app-notas-busqueda></app-notas-busqueda>
-<app-notas></app-notas>
-<button class="btn position-fixed bottom-0 end-0 p-3 mb-5 me-4 z-3" (click)="miMetodo()"><i class="bi bi-plus-circle-fill text-primary"></i></button>
+<div class="w-100 bg-fondo">
+    <app-notas-busqueda></app-notas-busqueda>
+    <app-notas></app-notas>
+</div>
 
