--- a/src/app/navbar-bottom/navbar-bottom.component.html
+++ b/src/app/navbar-bottom/navbar-bottom.component.html
@@ -1,7 +1,13 @@
 <nav class="w-100 navbar fixed-bottom bg-gray p-2 shadow-lg">
     <div class="d-flex justify-content-around w-100 align-items-center">
-        <i class="bi bi-house-door-fill"></i>
-        <i class="bi bi-inboxes"></i>
-        <i class="bi bi-gear"></i>
+       <a routerLink="/app/inicio">
+            <i class="bi bi-house-door text-dark"></i>
+       </a>
+        <a routerLink="/app/nueva-nota">
+            <i class="bi bi-plus-circle-fill text-secondary elevate-icon"></i>
+        </a>
+        <a routerLink="/app/config">
+            <i class="bi bi-gear text-dark"></i>
+        </a>
     </div>
 </nav>
