--- a/src/app/notas-busqueda/notas-busqueda.component.html
+++ b/src/app/notas-busqueda/notas-busqueda.component.html
@@ -1,10 +1,13 @@
-<div class="w-100 my-5">
+<div class="w-100 bg-primary py-2">
     <div class="d-flex align-items-center justify-content-center my-3">
-        <h3 class="mx-2">Todas las notas</h3>
-        <i class="bi bi-caret-down-fill text-primary"></i>
+        <h3 class="mx-2 text-light">Todas las notas</h3>
+        <i class="bi bi-caret-down-fill text-light"></i>
     </div>
     <div class="search has-search mx-auto">
-        <span class="form-control-feedback"><i class="bi bi-search text-primary"></i></span>
-        <input type="text" class="form-control rounded-pill border-secondary" placeholder="Search">
+        <span class="form-control-feedback">
+            <i class="bi bi-search"></i>
+        </span>
+        <input type="text" class="form-control rounded-pill" placeholder="Search">
+        <p class="text-center text-light mt-3 fs-5">{{ date | date: "mediumDate": undefined: 'es' }}</p>
     </div>
 </div>
