--- a/src/app/nueva-nota/nueva-nota.component.html
+++ b/src/app/nueva-nota/nueva-nota.component.html
@@ -1,17 +1,43 @@
-<div class="w-100">
-    <div class="display-6 py-5 d-flex justify-content-between w-75 mx-auto">
-        <i class="bi bi-caret-left-fill"></i>
-        <i class="bi bi-plus-lg"></i>
+<div class="contenedor">
+    <div class="d-flex align-items-center p-4 bg-primary position-relative">
+        <a routerLink="/app/inicio" class="d-flex align-items-center text-decoration-none">
+            <i class="bi bi-arrow-left-short text-white position-absolute start-0 ms-3 flechita"></i>
+        </a>
+        <h3 class="m-0 text-white fs-1 mx-auto">Nueva nota</h3>
     </div>
-    <div class="mx-4">
-        <p>Agrega un título</p>
-        <input type="text" class="form-control p-2 shadow-sm border-secondary">
-        <p class="mt-4">Agrega un contenido</p>
-        <textarea class="form-control h-5 shadow-sm border-secondary" style="height: 50vh"></textarea>
-        <select class="form-select p-2 mt-4 shadow-sm border-secondary">
-            <option value="1">Prioridad Alta</option>
-            <option value="2">Prioridad Media</option>
-            <option value="3">Prioridad Baja</option>
-        </select>
+    <div class="w-100 mt-4 px-5 fs-5">
+        <form>
+            <div class="mb-4">
+                <label for="titulo" class="form-label mx-2">Titulo</label>
+                <input type="text" class="form-control p-3 rounded-pill" id="titulo" placeholder="Ingresa el título">
+            </div>
+            <div class="mb-4">
+                <label for="descripcion" class="form-label mx-2">Descripción</label>
+                <textarea class="form-control p-3 rounded-4" id="descripcion" rows="5" placeholder="Ingresa una descripción"></textarea>
+            </div>
+            <div class="mb-4">
+                <i class="bi bi-exclamation-triangle text-warning fs-4 mx-2"></i>
+                <label for="prioridad" class="form-label">Prioridad</label>
+                <select id="prioridad" class="form-select p-3 rounded-pill">
+                    <option value="alta">Prioridad alta</option>
+                    <option value="media">Prioridad media</option>
+                    <option value="baja">Prioridad baja</option>
+                </select>
+            </div>
+            <div class="mb-4">
+                <i class="bi bi-tag text-success fs-4 mx-2"></i>
+                <label for="etiquetas" class="form-label">Etiquetas</label>
+                <select id="etiquetas" class="form-select p-3 rounded-pill">
+                    <option value="rutina">Rutina</option>
+                    <option value="trabajo">Trabajo</option>
+                    <option value="personal">Personal</option>
+                </select>
+            </div>
+            <div class="mt-4">
+                <a routerLink="/app/inicio">
+                    <button type="submit" class="btn btn-secondary text-light w-100 p-3 rounded-pill">Guardar nota</button>
+                </a>
+            </div>
+        </form>
     </div>
 </div>
