--- a/src/app/nueva-nota/nueva-nota.component.scss
+++ b/src/app/nueva-nota/nueva-nota.component.scss
@@ -1,3 +1,14 @@
-p{
-  font-size: 20px;
+.contenedor{
+  width: 100%;
+  height: 100vh;
+  background: #F9F9F9;
+  color: #6D6A6A;
+
+    .flechita{
+      font-size: 40px;
+    }
+
+  input, textarea, select{
+    border-color: #CDCCCC;
+  }
 }
