--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -1,7 +1,7 @@
 <div id="container">
     <div class="w-100 h-100 d-flex flex-column justify-content-center px-5">
         <i class="logo bi bi-check-square-fill mx-auto d-block text-secondary"></i>
-        <h2 class="text-center">¡Bienvenido!</h2>
+        <h2 class="text-center">¡Crea tu cuenta!</h2>
         <form>
             <div class="form-group my-4">
                 <label for="email" class="form-label m-3">Email</label>
@@ -11,19 +11,19 @@
                 <label for="password" class="form-label m-3">Password</label>
                 <input type="password" class="form-control p-3 shadow-sm bg-white rounded-pill" id="password" placeholder="Contraseña">
             </div>
-          <a routerLink="app/inicio">
-              <button type="submit" class="btn btn-secondary text-white col-12 p-3 rounded-pill">Ingresar</button>
-          </a>
+            <a routerLink="">
+                <button type="submit" class="btn btn-secondary text-white col-12 p-3 rounded-pill">Registrarse</button>
+            </a>
             <div class="text-center mt-4">
-                <p>o ingresa con</p>
+                <p>o registrate con</p>
                 <div class="d-flex justify-content-center align-items-center gap-3">
                     <i class="bi bi-facebook display-2"></i>
                     <div class="icon-circle">
                         <i class="bi bi-envelope display-6"></i>
                     </div>
                 </div>
-                <p class="mt-3">¿No tienes cuenta?
-                    <a routerLink="registro" class="text-decoration-none"><span class="text-secondary fw-bold"> Registrate</span></a>
+                <p class="mt-3">¿Ya tienes cuenta?
+                    <a routerLink="" class="text-decoration-none"><span class="text-secondary fw-bold"> Ingresa</span></a>
                 </p>
             </div>
         </form>
