--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,9 +5,7 @@ $theme-colors: (
   "secondary": #666AF6,
         "light": #FFFFFF,
         "dark": #000000,
-        "personal": #F5A921,
-        "importante": #F4863C,
-        "otro": #31446C,
+        "etiqueta": #31446C,
         "fondo": #F9F9F9,
         "segundo": #6D6A6A
 );
