--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,18 +2,16 @@
     <div class="w-100 h-100 d-flex flex-column justify-content-center px-5">
         <i class="logo bi bi-check-square-fill mx-auto d-block text-secondary"></i>
         <h2 class="text-center">¡Bienvenido!</h2>
-        <form>
+        <form [formGroup]="loginForm">
             <div class="form-group my-4">
-                <label for="email" class="form-label m-3">Email</label>
-                <input type="text" class="form-control p-3 shadow-sm bg-white rounded-pill" id="email" placeholder="Email">
+                <label for="email" class="form-label m-1">Email</label>
+                <input formControlName="email" type="text" class="form-control p-3 shadow-sm bg-white rounded-pill" id="email" placeholder="Email">
             </div>
             <div class="form-group my-4">
-                <label for="password" class="form-label m-3">Password</label>
-                <input type="password" class="form-control p-3 shadow-sm bg-white rounded-pill" id="password" placeholder="Contraseña">
+                <label for="password" class="form-label m-1">Password</label>
+                <input formControlName="password" type="password" class="form-control p-3 shadow-sm bg-white rounded-pill" id="password" placeholder="Contraseña">
             </div>
-          <a routerLink="app/inicio">
-              <button type="submit" class="btn btn-secondary text-white col-12 p-3 rounded-pill">Ingresar</button>
-          </a>
+            <button type="submit" class="btn btn-secondary text-white col-12 p-3 rounded-pill" (click)="login()">Ingresar</button>
             <div class="text-center mt-4">
                 <p>o ingresa con</p>
                 <div class="d-flex justify-content-center align-items-center gap-3">
