--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,29 @@
 <div id="container">
     <div class="w-100 h-100 d-flex flex-column justify-content-center px-5">
-        <img src="list.png" class="mx-auto d-block">
-        <form>
+        <i class="logo bi bi-check-square-fill mx-auto d-block text-secondary"></i>
+        <h2 class="text-center">¡Bienvenido!</h2>
+        <form [formGroup]="loginForm">
             <div class="form-group my-4">
-                <label for="email" class="form-label">Email</label>
-                <input type="text" class="form-control p-2 shadow-sm bg-white rounded" id="email" placeholder="Email">
+                <label for="email" class="form-label m-1">Email</label>
+                <input formControlName="email" type="text" class="form-control p-3 shadow-sm bg-white rounded-pill" id="email" placeholder="Email">
             </div>
             <div class="form-group my-4">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control p-2 shadow-sm bg-white rounded" id="password" placeholder="Contraseña">
+                <label for="password" class="form-label m-1">Password</label>
+                <input formControlName="password" type="password" class="form-control p-3 shadow-sm bg-white rounded-pill" id="password" placeholder="Contraseña">
             </div>
-           <button type="submit" class="btn btn-primary text-white col-12 p-2 mt-2" (click)="miMetodo()">Submit</button>
+            <button type="submit" class="btn btn-secondary text-white col-12 p-3 rounded-pill" (click)="login()">Ingresar</button>
+            <div class="text-center mt-4">
+                <p>o ingresa con</p>
+                <div class="d-flex justify-content-center align-items-center gap-3">
+                    <i class="bi bi-facebook display-2"></i>
+                    <div class="icon-circle">
+                        <i class="bi bi-envelope display-6"></i>
+                    </div>
+                </div>
+                <p class="mt-3">¿No tienes cuenta?
+                    <a routerLink="registro" class="text-decoration-none"><span class="text-secondary fw-bold"> Registrate</span></a>
+                </p>
+            </div>
         </form>
     </div>
 </div>
