--- a/src/app/notas/notas.component.html
+++ b/src/app/notas/notas.component.html
@@ -1,9 +1,19 @@
-<div class="w-100 card mx-auto mr-2">
-    <div class="card-body d-flex flex-column justify-content-center">
-        <div class="d-flex flex-row my-1">
-            <i class="bi bi-check-circle text-primary mx-2"></i>
-            <h5 class="card-title">Titulo</h5>
+<div *ngIf="notas.length > 0" class="w-100 my-4 mx-auto">
+    <div class="d-flex flex-column align-items-center">
+        <div *ngFor="let item of notas" class="w-100 card my-3 mx-auto p-2 shadow-sm" style="max-width: 600px;">
+            <div class="card-body d-flex flex-column justify-content-center p-0">
+                <div class="d-flex align-items-center mb-2 mx-2">
+                    <i class="bi bi-circle text-secondary mx-2"></i>
+                    <h5 class="mb-0">{{ item.titulo }}</h5>
+                    <span class="bg-etiqueta px-3 py-1 text-white rounded-pill ms-auto">
+                        {{ item.etiqueta }}
+                    </span>
+                </div>
+                <div class="d-flex justify-content-between mx-3 mb-0">
+                    <p class="mb-0 text-segundo">{{ item.fecha }}</p>
+                    <p class="mb-0 text-segundo">{{ item.prioridad }}</p>
+                </div>
+            </div>
         </div>
-        <p class="text-end mx-2">19/11/2024</p>
     </div>
 </div>
